kubernetes/applications/shelfmark/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shelfmark
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 8084
      targetPort: 8084
  selector:
    app: shelfmark
